--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/stack": "^6.3.28",
-    "expo": "~50.0.11",
+    "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-paper": "^5.12.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
