--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.5",
     "react-native-paper": "^5.12.3",
     "react-native-web": "~0.19.6"
   },
