--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "react-native": "0.73.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^4.4.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.2",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-svg": "14.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.19.6"
