--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.4",
+    "react-native-notifications": "^5.1.0",
     "react-native-paper": "^5.12.3",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "14.1.0",
+    "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
