--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
+    "axios": "^1.6.8",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,12 +28,15 @@
     "react-native-date-picker": "^4.4.1",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "^7.0.3",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.1",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.2"
   },
   "private": true
