--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-firebase/app": "^19.2.2",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
+    "axios": "^1.6.8",
     "expo": "~50.0.13",
+    "expo-constants": "~15.4.6",
+    "expo-device": "~5.9.4",
+    "expo-notifications": "~0.27.7",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.0",
+    "native-notify": "^4.0.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,7 +32,7 @@
     "react-native-notifications": "^5.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "^7.0.3",
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.19.6"
   },
